# ISM

./: .gitignore  CMakeLists.txt
StatisticsMemes1/: CMakeLists.txt  StatisticsMemes1.cpp
StatisticsMemes2/: CMakeLists.txt  StatisticsMemes2.cpp
StatisticsMemes3/: CMakeLists.txt  StatisticsMemes3.cpp
StatisticsMemes4/: memes4.py
StatisticsMemes5/: memes5.py
StatisticsMemes6/: memes.txt
